# rust-webapp

./: .gitignore  Cargo.toml  README.md  Rocket.toml
scripts/: run  test
src/: database.rs  main.rs
src/templates/: index.html.tera
