[package]
name = "rustweb"
version = "0.1.0"
authors = ["Kei Moomin Sugano <tobasojyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", features = ["tls"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates"]

[global.tls]
certs = "tmp/cert/certificate.pem"
key   = "tmp/cert/key.pem"
